# ProjetOthello

./: Othello.py  Pawn.py  README.md  pyproject.toml  requirements.txt
src/: Othello_legacy.py
src/othello/: AIPlayer.py  Board.py  Case.py  Color.py  Direction.py  HumanPlayer.py  Othello.py  Pawn.py  Player.py  cli.py  test_termination.py
tests/: test_ai.py  test_othello.py  test_termination.py
