[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "othello"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
othello-cli = "othello:main_cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["othello*"]