[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "othello"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
]

[project.urls]
Repository = "https://github.com/yiranlus/ProjetOthello"

[project.scripts]
othello-cli = "othello:cli.main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["othello*"]

[tool.setuptools.package-data]
othello = ["py.typed"]
