[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "othello"
version = "1.1.0"
authors = [
  {name = "Yiran Lu"},
  {name = "Alicia Clark"},
  {name = "Mehdi Chouchane"},
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
]

[project.urls]
Repository = "https://github.com/yiranlus/ProjetOthello"

[project.scripts]
othello = "othello:cli.main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["othello*"]

[tool.setuptools.package-data]
othello = ["py.typed"]
